# flowOs_simplified

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  baseline.py  client.py  collect_traces.py  eval.py  flowos_grpo_kaggle.ipynb  flowos_hf_jobs_clean.ipynb  graders.py  inference.py  models.py  my_env_v4.py  openenv.yaml  plot_metrics.py  plot_rewards.py  pyproject.toml  runtime.py  tasks.py  train.py  train_sft.py  training_utils.py
server/: Dockerfile  __init__.py  app.py  developer_control_room_environment.py  requirements.txt  ui.py
tests/: test_calibration.py  test_environment_behaviors.py
